--- a/GitSubmodules/GitSubmodules.csproj
+++ b/GitSubmodules/GitSubmodules.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Mvvm\Model\MainModel.cs" />
     <Compile Include="Mvvm\Model\Submodule.cs" />
     <Compile Include="Helper\RelayCommand.cs" />
+    <Compile Include="Mvvm\ViewModel\MainViewModelCommands.cs" />
     <Compile Include="Mvvm\View\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
